usermenu: Change org's project count expression

--- a/app/views/index/myOwnProjectList_partial.scala.html
+++ b/app/views/index/myOwnProjectList_partial.scala.html
@@ -16,7 +16,7 @@
             </div>
             <div class="projectName-owner all-org-names flex-item">
                 <div class="project-name org-name flex-item">@UserApp.currentUser().loginId</div>
-                <div class="project-owner flex-item">@ownProjects.size()</div>
+                <div class="project-owner flex-item sub-project-counter"></div>
             </div>
         </div>
         <div class="star-org flex-item">
