--- a/app/views/index/allOrganizationList_partial.scala.html
+++ b/app/views/index/allOrganizationList_partial.scala.html
@@ -7,10 +7,6 @@
 @(organization: Organization, favored:Boolean, isLast:Boolean = false)
 @import utils.TemplateHelper._
 
-@isAllowShowCount() = @{
-    UserApp.currentUser().isSiteManager || UserApp.currentUser().isAdminOf(organization)
-}
-
 @defining(UserApp.currentUser().getFavoriteProjects){ favoriteProjects =>
 <li class="@if(isLast){favored} org-li">
     <div class="org-list project-flex-container all-orgs">
@@ -20,7 +16,7 @@
             </div>
             <div class="projectName-owner all-org-names flex-item">
                 <div class="project-name org-name flex-item"><a href="@routes.OrganizationApp.organization(organization.name)" target="_blank">@organization.name</a></div>
-                <div class="project-owner flex-item">@if(isAllowShowCount){@organization.projects.size()}</div>
+                <div class="project-owner flex-item sub-project-counter"></div>
             </div>
         </div>
         <div class="star-org flex-item" data-organization-id="@organization.id">
