--- a/app/views/index/myOrganizationList.scala.html
+++ b/app/views/index/myOrganizationList.scala.html
@@ -8,7 +8,7 @@
 @import utils.TemplateHelper._
 
 @displayOrganizations(title:String, organizations:List[Organization], favoredOrganizations:List[Organization],  isActive:Boolean = false) = {
-    @if(organizations.isEmpty && favoredOrganizations.isEmpty) {
+    @if(organizations.isEmpty && favoredOrganizations.isEmpty && UserApp.currentUser().ownProjects.isEmpty) {
         <div id="@title" class="no-result tab-pane user-ul @if(isActive) {active}">@Messages("title.no.results")</div>
     } else {
         <ul class="tab-pane user-ul @if(isActive) {active}" id="@title">
