usermenu: Show favorite personal account projects

--- a/app/assets/stylesheets/less/_usermenu.less
+++ b/app/assets/stylesheets/less/_usermenu.less
@@ -80,6 +80,7 @@
     margin: 10px 0;
     padding: 0;
     list-style-type: none;
+
     .favored {
       border-bottom: 1px dashed #7b1fa2;
     }
@@ -90,11 +91,17 @@
     border-left: 1px solid #fff;
     border-top: 1px solid #fff;
     border-right: 1px solid #fff;
+    cursor: pointer;
+
     &:hover {
       color: #3592B5;
       border: 1px solid #3592B5 !important;
     }
-    cursor: pointer;
+
+  }
+
+  .etc-favorites {
+    border-top: 1px dashed #7b1fa2;
   }
 
   .user-search-form{
