--- a/app/views/index/myOrganizationList.scala.html
+++ b/app/views/index/myOrganizationList.scala.html
@@ -12,7 +12,7 @@
         <div id="@title" class="no-result tab-pane user-ul @if(isActive) {active}">@Messages("title.no.results")</div>
     } else {
         <ul class="tab-pane user-ul @if(isActive) {active}" id="@title">
-            @defining(UserApp.currentUser().ownProjects){ ownProjects =>
+            @defining(currentUser.ownProjects){ ownProjects =>
                 <li class="org-li">
                     <div class="org-list project-flex-container all-orgs">
                         <div class="project-item project-item-container">
@@ -20,7 +20,7 @@
                                 <i class="project-avatar"></i>
                             </div>
                             <div class="projectName-owner all-org-names flex-item">
-                                <div class="project-name org-name flex-item">@UserApp.currentUser().loginId</div>
+                                <div class="project-name org-name flex-item">@currentUser.loginId</div>
                                 <div class="project-owner flex-item sub-project-counter"></div>
                             </div>
                         </div>
@@ -28,7 +28,7 @@
                     </div>
                     <ul class="project-ul">
                     @for(project <- ownProjects){
-                        @allProjectList_partial(project, FavoriteProject.findByProjectId(UserApp.currentUser().id, project.id) != null)
+                        @allProjectList_partial(project, FavoriteProject.findByProjectId(currentUser.id, project.id) != null)
                     }
                     </ul>
                 </li>
@@ -46,6 +46,15 @@
                 }
             }
         </ul>
+        @defining(currentUser.favoriteProjects){ favoriteProjects =>
+            <ul class="etc-favorites user-ul">
+                @for(favoriteProject <- favoriteProjects){
+                    @if(!favoriteProject.project.hasGroup && !favoriteProject.owner.equals(currentUser.loginId)) {
+                        @myProjectList_partial(favoriteProject.project, true)
+                    }
+                }
+            </ul>
+        }
     }
 }
 
@@ -55,5 +64,5 @@
             <input class="search-input org-search" type="text" autocomplete="off" placeholder="@Messages("title.type.name")">
             <span class="bar"></span>
         </div>
-        @displayOrganizations("organizations", Organization.findAllOrganizations(UserApp.currentUser.loginId), currentUser.getFavoriteOrganizations)
+        @displayOrganizations("organizations", Organization.findAllOrganizations(currentUser.loginId), currentUser.getFavoriteOrganizations)
     </div>
