--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -186,7 +186,7 @@
                                 }
                                 </button>
                             }
-                            @if(isAllowedUpdate && !hasSharer) {
+                            @if(isAllowedUpdate) {
                                 <button id="issue-share-button" type="button" class="ybtn" data-toggle="popover" data-trigger="hover" data-placement="top" data-content="@Messages("issue.sharer.description")">@Messages("button.share.issue")</button>
                             }
 
@@ -520,6 +520,7 @@
             $('#issue-share-button').on('click', function () {
                 $('#sharer-list').show();
                 $('.sharer-list').show().addClass("sharer-list-border");
+                $('#sharer-list .select2-search-field > input').focus();
             });
 
             $('#translate').one('click', function (e) {
