--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -454,7 +454,7 @@
     }
 }
 
-@media all and (max-width:1199px){
+@media all {
     .attachment-files {
         font-size: 12px;
         .attachment-files-header {
@@ -491,20 +491,12 @@
 
         .unsupported-inner {
             width:95%;
-            max-width: 980px;
         }
     }
 
     .gnb-outer {
-        max-width: 1199px;
-        width: 100%;
         padding:0 10px;
         box-sizing: border-box;
-
-        .gnb-inner {
-            max-width:980px;
-            width: 100%;
-        }
     }
 
     .search-box {
@@ -514,26 +506,14 @@
     }
 
     .page-wrap-outer {
-        max-width: 1199px;
         padding:0 10px;
         width: 100%;
         box-sizing: border-box;
     }
 
-    .page-wrap {
-        width: 95%;
-        max-width:980px;
-    }
-
-    .project-menu-inner {
-        width: 95%;
-        max-width:980px;
-    }
-
     .project-page-wrap {
         width: 100%;
         margin-top: 5px !important;
-        max-width:980px;
         .project-breadcrumb {
             font-size: 1.5em;
             font-weight: bold;
@@ -542,33 +522,8 @@
 
     .site-breadcrumb-outer {
         width: 100%;
-        max-width: 1199px;
         padding:0 10px;
         box-sizing: border-box;
-
-        .site-breadcrumb-inner {
-            width: 95%;
-            max-width:980px;
-        }
-    }
-    .project-header-outer {
-        max-width: 1199px;
-
-        .project-header-inner {
-            .project-header-wrap {
-                width: 95%;
-                max-width: 980px;
-            }
-        }
-    }
-
-    .project-menu-outer {
-        max-width: 1199px;
-
-        .project-menu-inner {
-            width: 95%;
-            max-width: 980px;
-        }
     }
 
     .project-home-header {
@@ -617,13 +572,7 @@
         }
     }
 
-    .site-setting-wrap {
-        width: 95%;
-        max-width:980px;
-    }
-
     .page-footer-outer {
-        max-width: 1199px;
         padding:10px;
 
         .page-footer {
