--- a/app/views/index/myOrganizationList.scala.html
+++ b/app/views/index/myOrganizationList.scala.html
@@ -17,7 +17,7 @@
                     <div class="org-list project-flex-container all-orgs">
                         <div class="project-item project-item-container">
                             <div class="flex-item site-logo">
-                                <i class="project-avatar"></i>
+                                <i class="yobicon-angle-right"></i>
                             </div>
                             <div class="projectName-owner all-org-names flex-item">
                                 <div class="project-name org-name flex-item">@currentUser.loginId</div>
