--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -1,6 +1,10 @@
 @media all and (max-width: 720px){
     body {
         overflow-y: auto;
+        flex-direction: column;
+    }
+    .sidebar {
+        position: relative;
     }
     .sidemenu-width {
       width: 100vw !important;
