--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -10,4 +10,6 @@
 @import utils.JodaDateUtil
 @import utils.MenuType._
 
-@views.html.index.notifications(currentUser)
+@siteLayout_framed(utils.Config.getSiteName, utils.MenuType.SITE_HOME) {
+
+}
