sidebar: Modify margin and add selected ux

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -38,7 +38,7 @@
 
         .active {
             a {
-                color: white;
+                color: #f36c22;
                 background-color: black;
                 border: none;
             }
@@ -122,11 +122,15 @@
 }
 
 .pin {
-    position: fixed;
+    position: absolute;
     display: inline-block;
     left: -2px;
     top: 9px;
     border: 1px solid #666;
+
+    .yobicon-arrow-right {
+        padding: 4px 2px;
+    }
 }
 
 .gnb-inner {
