sidebar: Change old file comment

--- a/app/views/layout_framed.scala.html
+++ b/app/views/layout_framed.scala.html
@@ -1,7 +1,7 @@
 @**
-* Yona, 21c Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright Yona & Yobi Authors & NAVER Corp.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
 * https://yona.io
 **@
 @(title: String)(theme:String)(content: Html)(implicit request: RequestHeader)
