--- a/app/views/sidebar.scala.html
+++ b/app/views/sidebar.scala.html
@@ -24,13 +24,13 @@
 
 
 <div class="row-fluid user-menu-wrap">
-    <span class="user-menu"><a href="@routes.UserApp.userInfo(currentUser.loginId)">
+    <span class="user-menu"><a href="@routes.UserApp.userInfo(currentUser.loginId)" target="mainFrame">
         <span class="avatar-wrap smaller">
             <img src="@currentUser.avatarUrl(32)" />
         </span>
         <span class="caret-text hide-in-mobile">@currentUser.getPureNameOnly</span>
     </a></span>
-    <span class="user-menu"><a href="@routes.UserApp.editUserInfoForm()">@Messages("userinfo.accountSetting")</a></span>
+    <span class="user-menu"><a href="@routes.UserApp.editUserInfoForm()" target="mainFrame">@Messages("userinfo.accountSetting")</a></span>
     @currentAuth() { auth =>
         @if(auth != null) {
             <a href="@routes.Application.oAuthLogout"><span class="user-menu logout label">@Messages("title.logout")</span></a>
@@ -50,11 +50,13 @@
         @Messages("title.project")
         </a>
     </li>
+    @if(!Application.HIDE_PROJECT_LISTING && !UserApp.currentUser().isGuest){
     <li class="allProjectList">
         <a href="#allProjectList" data-toggle="tab">
         @Messages("common.order.all")
         </a>
     </li>
+    }
 </ul>
 <div class="tab-content tab-box">
     <div id="usermenu-tab-content-list" class="tab-content">
@@ -64,8 +66,10 @@
         <div class="tab-pane user-project-list" id="myProjectList">
         @views.html.index.myProjectList(UserApp.currentUser())
         </div>
-        <div class="tab-pane user-project-list" id="allProjectList">
-        @views.html.index.allProjectList(UserApp.currentUser())
-        </div>
+        @if(!Application.HIDE_PROJECT_LISTING && !UserApp.currentUser().isGuest){
+            <div class="tab-pane user-project-list" id="allProjectList">
+            @views.html.index.allProjectList(UserApp.currentUser())
+            </div>
+        }
     </div>
 </div>
