--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -11,7 +11,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    height: 100%;
+    min-height: 100vh;
 
     .nav {
         width: 270px;
@@ -24,7 +24,7 @@
             margin-bottom: -2px;
 
             a {
-                padding: 5px 10px;
+                padding: 8px 10px;
                 border: none;
                 color: lightgray;
 
@@ -125,11 +125,17 @@
     position: absolute;
     display: inline-block;
     left: -2px;
-    top: 9px;
+    top: 6px;
     border: 1px solid #666;
+    margin-right: 5px;
 
     .yobicon-arrow-right {
-        padding: 4px 2px;
+        padding: 6px 2px;
+    }
+
+    &:hover {
+        cursor: pointer;
+        color: white;
     }
 }
 
@@ -137,7 +143,7 @@
     margin:0 auto;
     color:#788ba7;
     height:40px;
-    width: 99%;
+    width: 98%;
 }
 
 .gnb-inner {
