milestone: Turn off autocomplete attribute at dueDate field

--- a/app/views/milestone/create.scala.html
+++ b/app/views/milestone/create.scala.html
@@ -84,7 +84,7 @@
                                     <dd>
                                         <div>
                                             <label for="dueDate">
-                                            <input type="text" name="dueDate" id="dueDate" class="validate due-date" value="@milestoneForm.data().get("dueDate")">
+                                            <input type="text" name="dueDate" id="dueDate" class="validate due-date" autocomplete="off" value="@milestoneForm.data().get("dueDate")">
                                             </label>
                                             <div id="datepicker" class="date-picker"></div>
                                         </div>
