sidebar: Enhance sidebar button ux

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -133,6 +133,10 @@
         padding: 6px 2px;
     }
 
+    .yobicon-arrow-left {
+        padding: 6px 2px;
+    }
+
     &:hover {
         cursor: pointer;
         color: white;
