sidebar: Makes iframe loading smoothly

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -66,6 +66,14 @@
     width: 100%;
 }
 
+.mainFrame {
+    display: none;
+}
+
+.loading-gif {
+    background: #FFF url('@{base-image-path}/loading-gif-2.gif') no-repeat center;
+}
+
 .prj {
     color:#202020;
 }
@@ -439,7 +447,7 @@
         .project-header-wrap {
             height:inherit;
             margin:0 auto;
-            width: 99%;
+            width: 97%;
             position: relative;
 
             .project-header-avatar {
@@ -3685,7 +3693,7 @@ div.markdown-preview {
 }
 .content-wrap {
     .text {
-        width: 99%; /*946px;/*866px;*/
+        width: 97%; /*946px;/*866px;*/
     }
     textarea.content{
       height: 300px;
